--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -28,8 +28,9 @@
   p{
     font: {
       size:16px;
-      weight:500;
+      weight:300;
     }
     color:#8F9095;
+    text-align: center;
   }
 }
